--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pardalis-game",
+  "name": "pardalis",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babylonjs/core": "^4.2.0",
     "assign-deep": "^1.0.1",
+    "cannon": "^0.6.2",
     "deep-diff": "^1.0.2",
     "deepcopy": "^2.1.0"
   },
