--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "assign-deep": "^1.0.1",
     "cannon": "^0.6.2",
     "deep-diff": "^1.0.2",
-    "deepcopy": "^2.1.0"
+    "deepcopy": "^2.1.0",
+    "socket.io-client": "^4.0.1"
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
